--- a/package.json
+++ b/package.json
@@ -9,16 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "axios": "^1.6.8",
-    "next": "14.2.5",
-    "react": "^18",
-    "react-dom": "^18",
-    "tailwindcss": "^3.4.9"
-  },
-  "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "typescript": "^5"
+    "axios": "^1.3.1",
+    "next": "latest",
+    "react": "latest",
+    "react-dom": "latest"
   }
 }
