--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
     "react-dom": "latest"
   },
   "devDependencies": {
+    "@types/node": "^18.0.0",
+    "@types/react": "^18.0.0",
     "eslint": "^8.0.0",
-    "eslint-config-next": "latest"
+    "eslint-config-next": "latest",
+    "typescript": "^4.9.5"
   },
   "engines": {
     "node": ">=14.0.0"
