--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,9 @@
 {
+  "version": 2,
   "builds": [
-    {
-      "src": "package.json",
-      "use": "@vercel/next"
-    }
+    { "src": "api/transcribe.py", "use": "@vercel/python" }
+  ],
+  "routes": [
+    { "src": "/api/transcribe", "dest": "api/transcribe.py" }
   ]
 }
