--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,23 @@
 {
   "version": 2,
   "builds": [
-    { "src": "api/transcribe.py", "use": "@vercel/python" }
+    {
+      "src": "pages/api/**/*.ts",
+      "use": "@vercel/node"
+    },
+    {
+      "src": "next.config.js",
+      "use": "@vercel/next"
+    }
   ],
   "routes": [
-    { "src": "/api/transcribe", "dest": "api/transcribe.py" }
-  ]
-}
-{
-  "rewrites": [
-    { "source": "/api/(.*)", "destination": "https://finalmaster.pythonanywhere.com/api/$1" }
+    {
+      "src": "/api/(.*)",
+      "dest": "/api/$1"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/$1"
+    }
   ]
 }
