--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "assemblyai": "^4.1.0",
+    "assemblyai": "^4.7.0",
     "axios": "^1.3.1",
     "next": "latest",
     "react": "latest",
@@ -23,6 +23,6 @@
     "typescript": "^4.9.5"
   },
   "engines": {
-    "node": ">=14.0.0"
+    "node": "^18.0.0"
   }
 }
