--- a/package.json
+++ b/package.json
@@ -11,10 +11,16 @@
   },
   "dependencies": {
     "assemblyai": "^4.7.0",
-    "axios": "^1.3.1",
+    "axios": "^1.7.5",
+    "lucide-react": "^0.436.0",
+    "natural": "^8.0.1",
     "next": "latest",
+    "openai": "^4.56.1",
     "react": "latest",
-    "react-dom": "latest"
+    "react-dom": "latest",
+    "recharts": "^2.12.7",
+    "stopword": "^3.1.1",
+    "terser": "^5.16.0"
   },
   "devDependencies": {
     "@types/node": "^18.19.47",
