--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "clean": "your clean command here"
+    "lint": "next lint"
   },
   "dependencies": {
     "assemblyai": "^4.7.0",
