--- a/vercel.json
+++ b/vercel.json
@@ -4,10 +4,6 @@
     {
       "src": "package.json",
       "use": "@vercel/next"
-    },
-    {
-      "src": "api/transcribe.py",
-      "use": "@vercel/python"
     }
   ],
   "routes": [
@@ -27,10 +23,7 @@
     }
   ],
   "functions": {
-    "api/transcribe.ts": {
-      "maxDuration": 300
-    },
-    "api/transcription-status.ts": {
+    "api/*.ts": {
       "maxDuration": 300
     }
   }
