--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,10 @@
 {
   "version": 2,
-  "builds": [
-    {
-      "src": "package.json",
-      "use": "@vercel/next"
-    }
-  ],
+  "buildCommand": "next build",
+  "devCommand": "next dev",
+  "installCommand": "npm install",
+  "framework": "nextjs",
+  "outputDirectory": ".next",
   "routes": [
     {
       "src": "/api/(.*)",
@@ -15,16 +14,5 @@
       "src": "/(.*)",
       "dest": "/$1"
     }
-  ],
-  "rewrites": [
-    {
-      "source": "/(.*)",
-      "destination": "/$1"
-    }
-  ],
-  "functions": {
-    "api/*.ts": {
-      "maxDuration": 300
-    }
-  }
+  ]
 }
