--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "assemblyai": "^latest",
+    "assemblyai": "latest",
     "axios": "^1.7.5",
     "lucide-react": "^0.436.0",
     "natural": "^8.0.1",
@@ -29,6 +29,6 @@
     "typescript": "^4.9.5"
   },
   "engines": {
-    "node": "^18.0.0"
+    "node": "^20.0.0"
   }
 }
